examples/hicro/manifests/hicroweb-deployment.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START container_hicroapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hicroweb
  labels:
    app: hicro
spec:
  selector:
    matchLabels:
      app: hicro
      tier: web
  template:
    metadata:
      labels:
        app: hicro
        tier: web
    spec:
      containers:
      - name: hicro-app
        image: gcr.io/hcc-cro1/hicro-app:1.0
        ports:
        - containerPort: 10000
        resources:
          requests:
            cpu: 200m
# [END container_hicroapp_deployment]
