examples/hicro/manifests/hicroweb-ingress-static-ip.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START container_hicroapp_ingress]
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hicroweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hicro-ip
  labels:
    app: hicro
spec:
  backend:
    serviceName: hicroweb-backend
    servicePort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: hicroweb-backend
  labels:
    app: hicro
spec:
  type: NodePort
  selector:
    app: hicro
    tier: web
  ports:
  - port: 10000
    targetPort: 10000
# [END container_hicroapp_ingress]
